--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,98 @@
-# Compiled class file
-*.class
+#################
+## Eclipse
+#################
 
-# Log file
-*.log
+*.pydevproject
+.project
+.metadata
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
 
-# BlueJ files
-*.ctxt
+# External tool builders
+.externalToolBuilders/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Locally stored "Eclipse launch configurations"
+*.launch
 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# CDT-specific
+.cproject
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# PDT-specific
+.buildpath
+
+#############
+## Windows detritus
+#############
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Mac crap
+.DS_Store
+
+
+#############
+## Python
+#############
+
+*.py[co]
+
+# Packages
+*.egg
+*.egg-info
+dist/
+build/
+eggs/
+parts/
+var/
+sdist/
+develop-eggs/
+.installed.cfg
+
+# Installer logs
+pip-log.txt
+
+# Unit test / coverage reports
+.coverage
+.tox
+
+#Translations
+*.mo
+
+#Mr Developer
+.mr.developer.cfg
+
+# Gradle
+/.gradle/
+/build/
+/run/
+/run_client/
+/run_server/
+/eclipse/
+/runtime/
+/server_runtime/
+*~
+*.lnk
+output.txt
+/bin
+
+#############
+## IntelliJ IDEA project files
+#############
+
+*.iml
+*.ipr
+*.iws
